--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -39,8 +39,34 @@ Graphics:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
-    - Randomizer hint sometimes says you are in BK mode with checks in logic
-        - I think this happens when your last check is behind a locked door that you have enough keys for but the randomizer thinks you don't because it isn't counting locked doors you have already opened.
+    - Add dungeon maps
+        - Render default dungeon map fully revealed, 1 map per zone, 1 floor per floor, centered in 6x6 grid
+            - 6x6 grid of 32x32 squares for each 1/4 super tile.
+            - Draw 2x2 white pixel for every solid tile on the edge of each 1/4 tile
+                - Draw fill color for any doors without targets
+                - Draw special color for any doors with targets
+                - Draw black for any pits with targets
+            - Draw floor indicator digits on the left "1F"/"B1" with menu select reticule on selected floor
+            - Press up/down to change floors
+        - Track explored screens and only render screens if the player has a map or has explored them
+            - Add map item to Tomb to test this
+            - Unexplored tiles are grey, explored are blue
+        - Support selecting 16x16 tiles when editor is open
+            - Click to select a tile
+            - SHIFT click unselected tile to add it to current selection
+            - SHIFT click selected tile to remove it from current selection
+            - CTRL + A to select the entire floor of the current map
+            - Render effect for selected tile
+            - Render effect for hover over tile
+            - ESCAPE to unselect all tiles
+        - Special context menu when tiles are selected
+            - setMap -> "map zone id" + "new map"(default floor is '1F') -> "floor" + "new floor"
+            - list of floors is returned dynamically based on existing map and floor ids
+            - store map data on each material world area definition as:
+                mapData = [TL, TR, BL, BR]
+                with structure as {id?: string, floor: '1F', x: 0, y: 0}
+            - read and write mapData from areaDefinition.parentDefinition.mapData when parentDefinition exists.
+        - Use WASD/arrow keys or click and drag to move all selected tiles within the 6x6 bounds.
 
     - Tasks before next major release
         - Cocoon
@@ -95,6 +121,10 @@ Current tasks:
             - On map, highlight the first mission and display a location name
             - If the user confirms, show them the help text or the mission.
 
+        - When hero/clone is falling, draw it behind all other sprites (on top of the background).
+            - Try using getDrawPriority to apply this to clone, we may need a new priority 'afterBackground' to force it to draw on top of all background elements (for example, it should be drawn on top of pit entrance objects).
+            - The hero itself will probably need special handling to render it immediately after the background in renderField since it always has special handling.
+
     - Forge
         - Gold mail offered by NPC if you bring gold ore and 500 money
 
@@ -106,9 +136,9 @@ Current tasks:
 
     - Ask Jon for falling animation with cloud poof for falling through clouds.
 
-    - When hero/clone is falling, draw it behind all other sprites (on top of the background).
-        - Try using getDrawPriority to apply this to clone, we may need a new priority 'afterBackground' to force it to draw on top of all background elements (for example, it should be drawn on top of pit entrance objects).
-        - The hero itself will probably need special handling to render it immediately after the background in renderField since it always has special handling.
+    - Randomizer hint sometimes says you are in BK mode with checks in logic
+        - I think this happens when your last check is behind a locked door that you have enough keys for but the randomizer thinks you don't because it isn't counting locked doors you have already opened.
+
 
     - Flame wall improvement
         - Refactor as individual flames so that each flame can hit individually or be destroyed by ice.
