--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -43,6 +43,14 @@ Current tasks:
 
     - Finish updating any maps that are left
 
+    - Change floorId of elevator as it changes floors.
+
+    - Fix error when updating map in crater when not drained
+        - "enterZoneByTarget.ts:108 Could not find craterLockedDoor in crater"
+        - The map shouldn't need to call 'enterZoneByTarget'.
+        - Triggered by "refreshIsHot", let's fail quietly in this case.
+
+
     - Tasks before next major release
         - Cocoon
             - Astral projection of boss size scales with health to 1/4 < 25%, 1/2 < 50%
