--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -39,7 +39,8 @@ Graphics:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
-    - Change floorId of elevator as it changes floors.
+    - Cannot find area definition (probably door going nowhere, Lab left hallway)
+    - Pits are randomized across worlds in entrance randomizer (entranceSeed=3, underwater took me to sky palace entrance)
 
     - Tasks before next major release
         - Cocoon
