--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -47,6 +47,14 @@ Pending Graphics From Jon:
 
 
 Current tasks:
+    - Finish updating War Temple interior
+        - Big Chest Room
+        - Check Spirit War Temple interior looks okay.
+    - Push to staging, test
+    - Push to production
+
+    - Render faint Vanara spirits for Vanara in the other world.
+
     - Add indicators for NPCs next dialogue option
         - New vs Read dialogue (could just be 100 vs 50% opacity)
         - Quest info Golden or Red !
@@ -56,6 +64,8 @@ Current tasks:
 
     - Add door light effect to entrances.
         - Check if zone target is outside, then render door light on background of southern doors automagically.
+
+    - Expand overworld tiles to 48x48
 
     - Investigate updating various tile sets to new version:
         - identify changed tiles and plan how to fix issues caused by the update:
