--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -47,6 +47,15 @@ Pending Graphics From Jon:
 
 
 Current tasks:
+    - Soft lock if you enter the helix portal on 1f diagonally (you walk left/right into pit over and over).
+    - Fix Basement order is backwards (test in cocoon dungeon and forge)
+    - Spirit Barrier text does not disappear after opening the portal in cocoon.
+
+    Low priority
+    - Bow help text should not appear in the spirit world fertility temple.
+    - Forest temple boss should provide a golden peach in addition to the clone tool.
+    - Spirit king text should remove sections for completed dungeons.
+
     - Push to staging, test
     - Push to production
 
